Laddie High School Content

--- a/components/hostel.html
+++ b/components/hostel.html
@@ -15,7 +15,7 @@
 	<nav class="nav">
 		<ul class="links">
 			<p>
-				<a href="../home.html"><img src="../img/icon/uniquee.png" height="50" width="50" alt=""></a>
+				<a href="../index.html"><img src="../img/icon/uniquee.png" height="50" width="50" alt=""></a>
 			</p>
 			<li>
 				<a href="#" class="active">Hostel</a>
