--- a/css/home.css
+++ b/css/home.css
@@ -1,14 +1,20 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: poppins;
+  transition: .5s;
 
 }
 
 /* Navigation Styles */
 
-.nav>.links {
+.nav > .links {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -75,7 +81,7 @@
 
 .dropdown-content a {
   color: #e0c097;
-  font-family: tahoma;
+  font-family: poppins;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -127,7 +133,7 @@
 .home-body .block p {
   color: silver;
   font-size: 2rem;
-  font-family: tahoma;
+  font-family: poppins;
 }
 
 .home-body .block span {
@@ -142,7 +148,7 @@
   font-size: 2rem;
   position: absolute;
   margin-top: -2rem;
-  left: 26rem;
+  left: 40%;
   padding: 10px 90px;
   z-index: 2;
   text-align: center;
@@ -194,6 +200,10 @@ footer {
 /* grid Image */
 .grass {
   background: #064663;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 
 
 }
@@ -211,9 +221,9 @@ footer {
   color: #e0c097;
   font-size: 2rem;
   position: absolute;
-  margin-top: -3.5rem;
-  left: 15rem;
-  padding: 10px 90px;
+  /* margin-top: -3.5rem; */
+  /* left: 15rem; */
+  padding: 20px 70px;
   z-index: 2;
   text-align: center;
 }
@@ -279,7 +289,7 @@ footer {
 .contact .content form input[type='submit'] {
   background: #e0c097;
   color: #064663;
-  font-family: tahoma;
+  font-family: poppins;
   font-size: 1rem;
   border: none;
   margin: auto;
